--- a/price-front/package.json
+++ b/price-front/package.json
@@ -24,6 +24,8 @@
     "eslint-config-next": "13.4.19",
     "msw": "1.3.1",
     "next": "13.4.19",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.5",
     "postcss": "8.4.29",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
