--- a/price-front/package.json
+++ b/price-front/package.json
@@ -26,6 +26,8 @@
     "postcss": "8.4.29",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "recoil": "^0.7.7",
+    "recoil-nexus": "^0.5.0",
     "sass": "^1.67.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
