--- a/price-front/package.json
+++ b/price-front/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "@tanstack/react-query": "^4.35.3",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -26,6 +27,7 @@
     "postcss": "8.4.29",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "recoil-nexus": "^0.5.0",
     "sass": "^1.67.0",
