--- a/price-checker/config/config.yaml
+++ b/price-checker/config/config.yaml
@@ -1,3 +1,9 @@
 http:
   host: 'localhost'
   port: 8000
+
+redis:
+  # 1 hour
+  ttl: 3600
+  url: redis://localhost:6379/
+  password: eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
