--- a/price-checker/package.json
+++ b/price-checker/package.json
@@ -22,11 +22,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.12",
+    "cache-manager": "^5.2.3",
+    "cache-manager-redis-store": "^3.0.1",
+    "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
+    "nestjs-redis": "^1.3.3",
     "playwright": "1.38.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -36,7 +43,8 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@playwright/test": "1.38.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.18",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.6",
     "@types/node": "^20.3.1",
