--- a/price-front/package.json
+++ b/price-front/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "taxios:generate": "taxios-generate -o src/types/Api.ts -e Api http://localhost:8000/api-json"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -14,12 +15,13 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "@simplesmiler/taxios": "^0.2.15",
     "@tanstack/react-query": "^4.35.3",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "axios": "^1.5.0",
+    "axios": "0.27.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "msw": "1.3.1",
@@ -42,5 +44,8 @@
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@simplesmiler/taxios-generate": "^0.2.15"
   }
 }
